# ScribeAuth

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: release-please.yml  test.yml  update-doc.yml
docs_source/: conf.py  installation.rst  methods.rst
scribeauth/: __init__.py  __main__.py  scribeauth.py
tests/: test_scribeauth.py
